---
source: apollo-router/src/plugins/authorization/scopes.rs
expression: "TestResult {\n    query: QUERY,\n    extracted_scopes: &extracted_scopes,\n    scopes: Vec::new(),\n    result: doc,\n    paths,\n}"
---
query:

        query {
            topProducts {
                type
            }

            me {
                name
            }
        }
        
extracted_scopes: {"profile", "read:user", "read:username"}
request scopes: []
filtered:
query {
  topProducts {
    type
  }
}

paths: ["/me"]
